# Harmonic-Spherical-Map

./: CMakeLists.txt  README.md  hello_world  main.cpp
Core/: Array.h  Edge.h  Face.h  OBJFileReader.cpp  OBJFileReader.h  Vertex.h
